# resume

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  config.txt  coverletter.typ  flake.nix  index.html  release_body.md  resume.typ  shell.nix
.github/workflows/: deploy.yml
